--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
         <div id="topbar">
             <a href="main.html">Home</a>
             <a href="https://github.com/dondizzzzzle">Github</a>
-            <a id="right" href="">Thing Here</a>
+            <a id="right" href="">⌘</a>
         </div>
 
         <div id="intro">
             <img src="images/beach.png" height="260px" alt="Me on a beach in Aruba">
-            <p>This is an all-in-one homepage to store my academic projects, namely my compilation of the history of 'pataphysics, a proto-absurdist philosophy that inspired Surrealism, Dadaism, the Theatre of the Absurd, and other overtly unserious or satirical schools of thought.</p>
-            <p>My goal is to track the development of 'pataphysical ideas through space and time, as well as its influence on literature, art, phiilosophy, and science. Additionally, I would like to confirm and put a name to as many 'pataphysicians as possible.</p>
+            <p>This is an all-in-one homepage where I will store my academic projects, namely my compilation of the history of science fiction as it relates to real world discoveries.</p>
+            <p>My current goal is to track the evolution of science fiction through history. Particular focus will be given to periods of scientific discovery, as the science fiction that arises in their wake has a noticeably more exploratory and starry-eyed nature.</p>
+            <p>It is my cursory observation that a better understanding of narrative also lends a better understanding of history. In both a Watsonian (within a story) and a Doylist (without a story) sense, narrative decision-making often reflects the culture, the period, and the zeitgeist that surrounded a given writer.</p>
+            <p>It cannot be argued that history is not also a narrative in itself.</p>
+            <p>A previous goal of mine was to track the development of 'pataphysical ideas through space and time, as well as their influence on literature, art, philosophy, and science. Additionally, I would have liked to confirm and put a name to as many 'pataphysicians as possible. My continuation of that project is undetermined.</p>
         </div>
 
         <div id="box">
             <p>Below is a list of ongoing and completed projects.</p>
             <ul style="list-style-type:square">
-                <li><a id="pata" href="pata.html">The History of 'Pataphysics and its Subcommittees</a> (ongoing)</li>
-                <li></li>
+                <li><a id="scifi" href="scifi.html">Science Fiction and its Relationship with Actual Science</a> (ongoing)</li>
+                <li><a id="pata" href="pata.html">The History of 'Pataphysics and its Subcommittees</a> (retired indefinitely)</li>
             </ul>
         </div>
     </body>
