--- a/pata.html
+++ b/pata.html
@@ -10,8 +10,8 @@
             <a href="main.html">Home</a>
         </div>
 
-        <div id="intro">
-            This is text
+        <div id="pata-intro">
+            To be written.
         </div>
     </body>
 
