--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div id="box">
-            <p>Below is a list of ongoing and completed projects.</p>
+            <p>Below is a list of ongoing projects.</p>
             <ul style="list-style-type:square">
                 <li><a id="scifi" href="scifi.html">Science Fiction and its Relationship with Actual Science</a> (ongoing)</li>
                 <li><a id="pata" href="pata.html">The History of 'Pataphysics and its Subcommittees</a> (retired indefinitely)</li>
