--- a/pata.html
+++ b/pata.html
@@ -7,7 +7,7 @@
     </head> 
     <body>
         <div id="topbar">
-            <a href="main.html">Home</a>
+            <a href="index.html">Home</a>
         </div>
 
         <div id="pata-intro">
