--- a/scifi.html
+++ b/scifi.html
@@ -7,7 +7,7 @@
     </head> 
     <body>
         <div id="topbar">
-            <a href="main.html">Home</a>
+            <a href="index.html">Home</a>
             <a id="right" href="">Sources</a>
         </div>
 
