--- a/scifi.html
+++ b/scifi.html
@@ -7,12 +7,13 @@
     </head> 
     <body>
         <div id="topbar">
-            <a href="index.html">Home</a>
-            <a id="right" href="">Sources</a>
+            <a href="main.html">Home</a>
+            <a id="right" href="https://github.com/dondizzzzzle/historicity">Github</a>
         </div>
 
         <div id="scifi-intro">
-            <p>To be written.</p>
+            <a href="historyofsciencefiction.html">Completed project.</a>
+            <p></p>
         </div>
     </body>
 
